@@ -47,6 +47,8 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.StringReader;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Enumeration;
 import java.util.Hashtable;
@@ -56,6 +58,7 @@ import javax.xml.parsers.SAXParserFactory;
 import org.openide.ErrorManager;
 import org.openide.filesystems.FileUtil;
 import org.openide.modules.InstalledFileLocator;
+import org.openide.util.Exceptions;
 
 /**
  *
@@ -126,14 +129,12 @@ public class HelpManager {
                 
                 helpMap = handler.getMap();
                 
-                String url="";
-                
                 File f = InstalledFileLocator.getDefault().locate(help, null, false); //NoI18N
                 if (f != null){
                     try {
                         URL urll = f.toURL();
                         urll = FileUtil.getArchiveRoot(urll);
-                        helpZipURL = urll.toString();
+                        helpZipURL = new URI(urll.toString()).toString();
                     } catch (java.net.MalformedURLException e){
                         ErrorManager.getDefault().notify(ErrorManager.EXCEPTION, e);
                         helpMap = new Hashtable();
@@ -263,7 +264,9 @@ public class HelpManager {
         if(link != null){
             String surl = helpZipURL + link;
             try{
-                url = new URL(surl);
+                url = new URI(surl).toURL();
+            } catch (URISyntaxException ex) {
+                Exceptions.printStackTrace(ex);
             } catch (java.net.MalformedURLException e){
                 ErrorManager.getDefault().log(e.toString());
                 return null;
@@ -279,7 +282,9 @@ public class HelpManager {
         if(helpItem != null){
             String surl = helpZipURL + helpItem.getFile();
             try{
-                url = new URL(surl);
+                url = new URI(surl).toURL();
+            } catch (URISyntaxException ex) {
+                Exceptions.printStackTrace(ex);
             } catch (java.net.MalformedURLException e){
                 ErrorManager.getDefault().log(e.toString());
                 return null;
